# nanoftirtools

./: .gitignore  AUTHORS.md  CITATION.cff  README.md  example.ipynb  pyproject.toml
data/: 2025-10-07 110545 Interferograms Fourier Scan.txt  2025-10-07 110545 NF S.txt  2025-10-07 113626 Interferograms Fourier Scan.txt  2025-10-07 113626 NF S.txt  2025-10-07 114134 Interferograms Fourier Scan.txt  2025-10-07 114134 NF S.txt  2025-10-07 120447 Interferograms Fourier Scan.txt  2025-10-07 120447 NF S.txt  2025-10-07 120939 Interferograms Fourier Scan.txt  2025-10-07 120939 NF S.txt  2025-10-07 133015 Interferograms Fourier Scan.txt  2025-10-07 133015 NF S.txt  2025-10-07 133814 Interferograms Fourier Scan.txt  2025-10-07 133814 NF S.txt  2025-10-07 134752 Interferograms Fourier Scan.txt  2025-10-07 134752 NF S.txt  2025-10-07 135144 Interferograms Fourier Scan.txt  2025-10-07 135144 NF S.txt  2025-10-07 135929 Interferograms Fourier Scan.txt  2025-10-07 135929 NF S.txt  2025-10-07 140807 Interferograms Fourier Scan.txt  2025-10-07 140807 NF S.txt  2025-10-07 144814 Interferograms Fourier Scan.txt  2025-10-07 144814 NF S.txt  2025-10-07 161244 Interferograms Fourier Scan.txt  2025-10-07 161244 NF S.txt  2025-10-07 162123 Interferograms Fourier Scan.txt  2025-10-07 162123 NF S.txt  2025-10-07 162638 Interferograms Fourier Scan.txt  2025-10-07 162638 NF S.txt  2025-10-07 164131 Interferograms Fourier Scan.txt  2025-10-07 164131 NF S.txt  2025-10-07 165002 Interferograms Fourier Scan.txt  2025-10-07 165945 Interferograms Fourier Scan.txt  2025-10-07 165945 NF S.txt
(+1476 files in other folders)
