[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoftirtools"
version = "0.1.0"
description = "AFM & NEASPEC utilities: image loaders (GSF/GWY), spectra parsing, Plotly plotting, peak detection and library matching."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Till Leissner", email = "till@mci.sdu.dk" }]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "plotly>=5.18",
  "scipy>=1.10",
  "pybaselines>=1.0",
  "gsffile>=0.5.4",
  "gwyfile>=0.2.0",
  "jupyter>=1.1.1",
  "lmfit>=1.3.4",
  "matplotlib>=3.10.7",
]

[project.optional-dependencies]
gwy = ["gwyfile>=0.2"]
dev = ["ruff>=0.5", "mypy>=1.8", "pytest>=8", "ipykernel>=6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoftirtools*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
